--- a/themes/custom/zoom/scss/_variables_bootstrap.scss
+++ b/themes/custom/zoom/scss/_variables_bootstrap.scss
@@ -48,12 +48,12 @@ $body-color:                $gray-800 !default;
 // Fonts
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif:      "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-serif:           Georgia, Cambria, "Times New Roman", Times, serif !default;
 // stylelint-enable
 
 $font-size-base:              1.1rem !default;
-$headings-font-weight:        700 !default;
+$headings-font-weight:        900 !default;
 
 // Tables
 
